RESOLVED FIXED75352
getComputedStyle for padding is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=75352
Summary getComputedStyle for padding is not implemented.
Alexis Menard (darktears)
Reported 2011-12-29 06:52:55 PST
getComputedStyle for padding is not implemented.
Attachments
Patch (9.00 KB, patch)
2011-12-29 06:53 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-12-29 06:53:55 PST
WebKit Review Bot
Comment 2 2011-12-29 10:37:10 PST
Comment on attachment 120743 [details] Patch Clearing flags on attachment: 120743 Committed r103809: <http://trac.webkit.org/changeset/103809>
WebKit Review Bot
Comment 3 2011-12-29 10:37:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.