getComputedStyle for padding is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75352

Reviewed by Andreas Kling.

Source/WebCore:

Implement getComputedStyle for padding shorthand property.

Test: fast/css/getComputedStyle/getComputedStyle-padding-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add test to cover that we return correct values.

* fast/css/getComputedStyle/getComputedStyle-padding-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-padding-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103809 268f45cc-cd09-0410-ab3c-d52691b4dbfc